# capstone-mas

./: .env.example  .gitignore  README.md  bonafide_master.db  creds.json  marketing_data.csv  prompts.jsonl  pyproject.toml  sql.py
data/: clean_data_generation.py
data/data_transformations/bonafide/Attribution Tool Platform/: CrossChannelReport-InitialPurchase-AllCustomers-2024-07-01-2024-07-07.xlsx
data/data_transformations/solawave/Attribution Tool Platform/Northbeam/: sales_data-solawave-2024_08_17_12_26_59_035986-000000000000.xlsx
example_data/: import sqlite3.py
output/: insight_summary.txt  output.txt
src/: sql_agents.py
src/gui/: app.py
src/weekly_update/: crew.py  crew_gcp.py  main.py  slack_bot.py  slack_bot_main.py
src/weekly_update/config/: agents.yaml  tasks.yaml
src/weekly_update/tools/: csv_extraction_tool.py  etl_functions.py  google_sheet_tool.py  google_sheets_reader.py
tests_and_learnings/: agents_duplicated.yaml  chan_edit_crew_2.py  chan_edit_crew_sql.py  crew_duplicated.py  sql_ef.py  sql_sqd.py  tasks_duplicated.yaml
