[tool.poetry]
name = "weekly_update"
version = "0.1.0"
description = "marketing agency using crewAI"
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }
crewai-tools = "^0.4.6"
google-api-python-client = ">=2.139.0"

[tool.poetry.scripts]
weekly_update = "weekly_update.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"